--- a/.github/workflows/moodle-release.yml
+++ b/.github/workflows/moodle-release.yml
@@ -1,5 +1,5 @@
 #
-# Whenever a new tag starting with "v" is pushed, add the tagged version
+# Whenever a new release is published, add the tagged version
 # to the Moodle Plugins directory at https://moodle.org/plugins
 #
 # revision: 2021070201
